# rsmedia

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: ci.yml
data/: pixel.txt
data/ffmpeg-5_1/: binding.rs
data/ffmpeg-6_1/: binding.rs
data/ffmpeg-7_1/: binding.rs
examples/: de_en_coder.rs  decode_frame.rs  encode_frame.rs  encode_video.rs  images_to_video.rs  mod.rs  transcode.rs  video_oidn.rs
examples/misc/: av_convert.rs  av_spliter.rs  avio.rs  avio_reading.rs  avio_writing.rs  image_dump.rs  metadata.rs  mod.rs  thumbnail.rs  tutorial01.rs
ffmpeg/: .gitignore  Cargo.toml  README.md
ffmpeg-next/: Cargo.toml
ffmpeg-next/examples/: transcode-audio.rs
ffmpeg-next/src/: lib.rs
ffmpeg-next/src/codec/: audio.rs  audio_service.rs  capabilities.rs  codec.rs  compliance.rs  context.rs  debug.rs  discard.rs  field_order.rs  flag.rs  id.rs  mod.rs  picture.rs  profile.rs  threading.rs  video.rs
ffmpeg-next/src/codec/decoder/: audio.rs  decoder.rs  mod.rs  opened.rs  subtitle.rs  video.rs
ffmpeg-next/src/codec/encoder/: audio.rs  decision.rs  encoder.rs  mod.rs  subtitle.rs  video.rs
ffmpeg-next/src/codec/packet/: borrow.rs  flag.rs  packet.rs  side_data.rs
ffmpeg-next/src/codec/subtitle/: mod.rs  rect.rs  rect_mut.rs
ffmpeg-next/src/device/: extensions.rs  input.rs
ffmpeg-next/src/filter/: filter.rs  mod.rs
ffmpeg-next/src/filter/context/: context.rs  sink.rs  source.rs
ffmpeg-next/src/format/: mod.rs
ffmpeg-next/src/format/chapter/: chapter.rs  chapter_mut.rs
ffmpeg-next/src/format/context/: common.rs  destructor.rs  input.rs  output.rs
ffmpeg-next/src/format/format/: flag.rs  iter.rs  mod.rs  output.rs
ffmpeg-next/src/format/stream/: disposition.rs  stream.rs  stream_mut.rs
ffmpeg-next/src/software/: mod.rs
ffmpeg-next/src/software/resampling/: context.rs  dither.rs  engine.rs  filter.rs  flag.rs  mod.rs
ffmpeg-next/src/software/scaling/: context.rs  extensions.rs  vector.rs
ffmpeg-next/src/util/: channel_layout.rs  error.rs  legacy_channel_layout.rs  media.rs  picture.rs  rational.rs
ffmpeg-next/src/util/chroma/: location.rs
ffmpeg-next/src/util/color/: primaries.rs  range.rs  space.rs  transfer_characteristic.rs
ffmpeg-next/src/util/dictionary/: iter.rs  mutable.rs
ffmpeg-next/src/util/format/: pixel.rs  sample.rs
ffmpeg-next/src/util/frame/: mod.rs  side_data.rs  video.rs
ffmpeg-next/src/util/log/: level.rs
ffmpeg-next/src/util/mathematics/: rescale.rs  rounding.rs
ffmpeg-next/src/util/option/: mod.rs  traits.rs
ffmpeg/examples/: avinfo.rs  chapters.rs  codec-info.rs  dump-frames.rs  metadata.rs  remux.rs  transcode-audio.rs  transcode-x264.rs
ffmpeg/src/: lib.rs
ffmpeg/src/codec/: audio.rs  audio_service.rs  capabilities.rs  codec.rs  compliance.rs  context.rs  debug.rs  discard.rs  field_order.rs  flag.rs  id.rs  mod.rs  parameters.rs  picture.rs  profile.rs  threading.rs  video.rs
ffmpeg/src/codec/decoder/: audio.rs  check.rs  conceal.rs  decoder.rs  mod.rs  opened.rs  slice.rs  subtitle.rs  video.rs
ffmpeg/src/codec/encoder/: audio.rs  comparison.rs  decision.rs  encoder.rs  mod.rs  prediction.rs  subtitle.rs  video.rs
ffmpeg/src/codec/packet/: borrow.rs  flag.rs  packet.rs  side_data.rs  traits.rs
ffmpeg/src/codec/subtitle/: flag.rs  mod.rs  rect.rs  rect_mut.rs
ffmpeg/src/device/: extensions.rs  input.rs  mod.rs  output.rs
ffmpeg/src/filter/: filter.rs  flag.rs  graph.rs  mod.rs  pad.rs
ffmpeg/src/filter/context/: context.rs  sink.rs  source.rs
ffmpeg/src/format/: mod.rs  network.rs
ffmpeg/src/format/chapter/: chapter.rs  chapter_mut.rs
ffmpeg/src/format/context/: common.rs  destructor.rs  input.rs  output.rs
ffmpeg/src/format/format/: flag.rs  input.rs  iter.rs  mod.rs  output.rs
ffmpeg/src/format/stream/: disposition.rs  stream.rs  stream_mut.rs
ffmpeg/src/software/: mod.rs
ffmpeg/src/software/resampling/: context.rs  delay.rs  dither.rs  engine.rs  extensions.rs  filter.rs  flag.rs  mod.rs
ffmpeg/src/software/scaling/: color_space.rs  context.rs  extensions.rs  filter.rs  flag.rs  mod.rs  support.rs  vector.rs
ffmpeg/src/util/: channel_layout.rs  error.rs  interrupt.rs  legacy_channel_layout.rs  media.rs  mod.rs  picture.rs  rational.rs  time.rs
ffmpeg/src/util/chroma/: location.rs
ffmpeg/src/util/color/: primaries.rs  range.rs  space.rs  transfer_characteristic.rs
ffmpeg/src/util/dictionary/: immutable.rs  iter.rs  mutable.rs  owned.rs
ffmpeg/src/util/format/: pixel.rs  sample.rs
ffmpeg/src/util/frame/: audio.rs  flag.rs  mod.rs  side_data.rs  video.rs
ffmpeg/src/util/log/: flag.rs  level.rs  mod.rs
ffmpeg/src/util/mathematics/: rescale.rs  rounding.rs
ffmpeg/src/util/option/: mod.rs  traits.rs
ffmpeg/utils/: linux_ffmpeg.rs  windows_ffmpeg.rs
metadata/: Cargo.toml
metadata/src/: cli.rs  lib.rs  main.rs  media_file.rs  prejudice.rs  render.rs  scan.rs  tags.rs  util.rs
metadata/src/stream/: audio.rs  subtitle.rs  video.rs
metadata/tests/: integration_test.rs
src/: decode.rs  encode.rs  error.rs  ffi.rs  ffi_hwaccel.rs  flags.rs  frame.rs  h264.rs  hwaccel.rs  init.rs  io.rs  lib.rs  location.rs  mux.rs  options.rs  packet.rs  pixel.rs  rational.rs  stream.rs  time.rs
tests/: decode_audio.rs  decode_video.rs  encode_video.rs  extract_mvs.rs  h264_basic.rs  remux.rs  transcode.rs  transcode_aac.rs  vaapi_encode.rs
