[package]
name = "rsmedia"
description = "High-level video toolkit based on ffmpeg."
keywords = ["video", "ffmpeg", "encoding", "decoding", "muxing"]
categories = ["multimedia", "multimedia::video"]
version = "0.10.3"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/oddity-ai/video-rs"
readme = "README.md"

[dependencies]
ffmpeg = { path = "./ffmpeg" }
ndarray = { version = "0.16", optional = true }
tracing = "0.1"
url = "2"

[dev-dependencies]
image = "0.25"
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
