[package]
name = "rsmedia"
description = "High-level video toolkit based on ffmpeg."
keywords = ["video", "ffmpeg", "encoding", "decoding", "muxing"]
categories = ["multimedia", "multimedia::video"]
version = "0.1.0"
authors = ["phial3 Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/phial3/rsmedia"
readme = "README.md"

[features]
default = ["ffmpeg7", "ndarray"]
ffmpeg6 = ["rsmpeg/ffmpeg6", "rsmpeg/link_system_ffmpeg"]
ffmpeg7 = ["rsmpeg/ffmpeg7", "rsmpeg/link_system_ffmpeg"]

[dependencies]
rsmpeg = { git = "https://github.com/larksuite/rsmpeg", branch = "master", features = ["ffmpeg7", "link_system_ffmpeg"] }
ndarray = { version = "0.16", optional = true }
url = "2"
libc = "0.2"
tracing = "0.1"
bitflags = "2.8"

[dev-dependencies]
image = "0.25"
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
all-features = true

[profile.dev]
debug = true