[package]
name    = "ffmpeg"
version = "7.0.4"
edition = "2021"
authors = ["meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
license = "WTFPL"

description   = "Safe FFmpeg wrapper (FFmpeg 4 compatible fork of the ffmpeg crate)"
documentation = "https://docs.rs/ffmpeg-next"
homepage      = "https://github.com/zmwangx/rust-ffmpeg#readme"
repository    = "https://github.com/zmwangx/rust-ffmpeg, https://github.com/zmwangx/rust-ffmpeg-sys"

readme        = "README.md"
keywords      = ["ffmpeg", "multimedia", "video", "audio"]
categories    = ["multimedia"]

[features]
ffmpeg6 = ["rsmpeg/ffmpeg6"]
ffmpeg7 = ["rsmpeg/ffmpeg7"]
# Try linking ffmpeg with pkg-config.
link_system_ffmpeg = ["rsmpeg/link_system_ffmpeg"]
# Try linking ffmpeg with vcpkg.
link_vcpkg_ffmpeg = ["rsmpeg/link_vcpkg_ffmpeg"]

default = [
    "ffmpeg7",
    "link_system_ffmpeg"
]

[dependencies]
libc     = "0.2"
bitflags = "2.6"
image    = { version = "0.25", optional = true }
rsmpeg = { git = "https://github.com/larksuite/rsmpeg", branch = "master", features = ["ffmpeg7", "link_system_ffmpeg"] }

