[package]
name    = "ffmpeg"
version = "7.0.4"
edition = "2021"
authors = ["meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
license = "WTFPL"
description   = "Safe FFmpeg wrapper (FFmpeg 4 compatible fork of the ffmpeg crate)"
documentation = "https://docs.rs/ffmpeg-next"
homepage      = "https://github.com/zmwangx/rust-ffmpeg#readme"
repository    = "https://github.com/zmwangx/rust-ffmpeg, https://github.com/zmwangx/rust-ffmpeg-sys"
readme        = "README.md"
keywords      = ["ffmpeg", "multimedia", "video", "audio"]
categories    = ["multimedia"]

[features]
# Use FFmpeg 7 by default
default = ["ffmpeg7", "link_system_ffmpeg"]

# Note that ffmpeg{x}
ffmpeg5 = ["rusty_ffmpeg/ffmpeg5"]
ffmpeg6 = ["rusty_ffmpeg/ffmpeg6"]
ffmpeg7 = ["rusty_ffmpeg/ffmpeg7"]

# Try linking ffmpeg with pkg-config.
link_system_ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
# Try linking ffmpeg with vcpkg.
link_vcpkg_ffmpeg = ["rusty_ffmpeg/link_vcpkg_ffmpeg"]

[dependencies]
libc     = "0.2"
bitflags = "2.6"
image    = { version = "0.25", optional = true }
rusty_ffmpeg = { version = "0.16.1", default-features = false }

