[package]
name    = "ffmpeg"
version = "7.1.0"
build   = "build.rs"

authors = ["meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
license = "WTFPL"
description   = "Safe FFmpeg wrapper (FFmpeg 4 compatible fork of the ffmpeg crate)"
documentation = "https://docs.rs/ffmpeg-next"
homepage      = "https://github.com/zmwangx/rust-ffmpeg#readme"
repository    = "https://github.com/zmwangx/rust-ffmpeg, https://github.com/zmwangx/rust-ffmpeg-sys"
readme        = "README.md"
keywords      = ["ffmpeg", "multimedia", "video", "audio"]
categories    = ["multimedia"]

[features]
# Use FFmpeg 7 by default
default = ["ffmpeg7", "link_system_ffmpeg", "codec", "device", "filter", "format", "software-resampling", "software-scaling"]

# Note that ffmpeg{x}
ffmpeg4 = []
ffmpeg41 = []
ffmpeg42 = []
ffmpeg43 = []
ffmpeg5 = ["rusty_ffmpeg/ffmpeg5"]
ffmpeg6 = ["rusty_ffmpeg/ffmpeg6"]
ffmpeg7 = ["rusty_ffmpeg/ffmpeg7"]

## adapter ffmpeg-next
rpi = []
ffmpeg_4_0 = ["ffmpeg4"]
ffmpeg_4_1 = ["ffmpeg4"]
ffmpeg_4_2 = ["ffmpeg4"]
ffmpeg_4_3 = ["ffmpeg4"]
ffmpeg_4_4 = ["ffmpeg4"]
ffmpeg_5_0 = ["ffmpeg5"]
ffmpeg_5_1 = ["ffmpeg5"]
ffmpeg_6_0 = ["ffmpeg6"]
ffmpeg_6_1 = ["ffmpeg6"]
ffmpeg_7_0 = ["ffmpeg7"]
ffmpeg_7_1 = ["ffmpeg7"]
# components
codec = []
device = []
filter = []
format = []
resampling = []
postprocessing = []
software-resampling = []
software-scaling = []

# Try linking ffmpeg with pkg-config.
link_system_ffmpeg = ["rusty_ffmpeg/link_system_ffmpeg"]
# Try linking ffmpeg with vcpkg.
link_vcpkg_ffmpeg = ["rusty_ffmpeg/link_vcpkg_ffmpeg"]

[dependencies]
libc = "0.2"
bitflags = "2.8"
image = { version = "0.25", optional = true }
rusty_ffmpeg = { version = "0.16.1", default-features = false }
